# forum

./: .gitignore  Dockerfile  README.md  README_agentic_framework.md  README_narrative_demo.md  abstracted_agentic_game_architecture.md  docker-entrypoint.sh  fix_openai.py  integrated_senate_server.py  pyproject.toml  pytest.ini  requirements.txt  roman_calendar_specification.md  roman_senate_architecture_analysis_plan.md  roman_senate_migration_plan.md  run-docker-simulation.sh  run_senate.py  run_simulation.py  run_speech_enabled_simulation.py  run_speech_enabled_simulation_v2.py  run_tests.py  setup.py
docs/: README-api-modes.md  README-docker.md  README.md  agent_architecture.md  agent_architecture_assessment.md  agent_simulation.md  architecture.md  event_driven_architecture.md  famous_roman_orators.md  index.md  interactive_mode.md  llm_providers.md  openai_gpt4_configuration.md  player_gameplay.md  relationship_system.md  roman_political_factions.md  roman_senate_history.md  roman_senate_speech_framework_design.md  roman_senate_traditions.md  senator_relationship_system_design.md  speech_generation.md  user_guide.md
logs/: <typer.models.OptionInfo object at 0x1139a5220>  README.md
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
roman_senate_game/: .gitignore  INSTALLATION.md  README.md  config.py  debate.py  debate_new.py  install.py  interjection_handler.py  interjections.py  logging_utils.py  main.py  officials.py  player_manager.py  player_ui.py  political_maneuvering.py  requirements.txt  senate_session.py  (+6 more)
(+244 files in other folders)
