[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roman-senate-game"
version = "0.1.0"
description = "A Roman Senate simulation game with AI-powered senators"
readme = "README.md"
authors = [
    {name = "Roman Senate Game Team"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "rich>=10.0.0",
    "python-dotenv>=1.0.0",
    "asyncio>=3.4.3",
    "tqdm>=4.65.0",
    "aiofiles>=23.1.0",
    "requests>=2.31.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "flake8>=6.0.0",
]

[project.scripts]
senate = "roman_senate.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"